src/main/java/Safedeclaration/gen/safedeclarationParser.java
// Generated from C:/Users/Mandrup/Documents/GitHub/ANTLR/src/main/java/Safedeclaration\safedeclaration.g4 by ANTLR 4.9.2
package Safedeclaration.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class safedeclarationParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SAFETY=1, BOOLVAL=2, NUMVAL=3, DOT=4, NOT=5, AND=6, OR=7, NUMDCL=8, CHARDCL=9, 
		STRDCL=10, BOOLDCL=11, CHARVAL=12, STRVAL=13, ID=14, SINGLEQOUTE=15, DOUBLEQOUTE=16, 
		ASSIGN=17, LPAR=18, RPAR=19, PLUS=20, MINUS=21, TIMES=22, DIVISION=23, 
		MOD=24, PI=25, LEQ=26, GEQ=27, EQ=28, NEQ=29, LESS=30, GREATER=31, HASHTAG=32, 
		WS=33, COMMENT=34;
	public static final int
		RULE_safedeclaration = 0, RULE_vdcl = 1, RULE_vdclassign = 2, RULE_numdecl = 3, 
		RULE_booldecl = 4, RULE_chardecl = 5, RULE_stringdecl = 6, RULE_numdclassign = 7, 
		RULE_chardclassign = 8, RULE_stringdclassign = 9, RULE_booldclassign = 10, 
		RULE_bexpr = 11, RULE_bterm = 12, RULE_bpart = 13, RULE_bpiece = 14, RULE_blast = 15, 
		RULE_aexpr = 16, RULE_term = 17, RULE_part = 18, RULE_partbool = 19, RULE_numberval = 20, 
		RULE_bop = 21, RULE_relop = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"safedeclaration", "vdcl", "vdclassign", "numdecl", "booldecl", "chardecl", 
			"stringdecl", "numdclassign", "chardclassign", "stringdclassign", "booldclassign", 
			"bexpr", "bterm", "bpart", "bpiece", "blast", "aexpr", "term", "part", 
			"partbool", "numberval", "bop", "relop"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'.'", "'!'", "'&&'", "'||'", "'number'", "'char'", 
			"'string'", "'boolean'", null, null, null, "'''", "'\"'", "'='", "'('", 
			"')'", "'+'", "'-'", "'*'", "'/'", "'%'", "'pi'", "'<='", "'>='", "'=='", 
			"'!='", "'<'", "'>'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SAFETY", "BOOLVAL", "NUMVAL", "DOT", "NOT", "AND", "OR", "NUMDCL", 
			"CHARDCL", "STRDCL", "BOOLDCL", "CHARVAL", "STRVAL", "ID", "SINGLEQOUTE", 
			"DOUBLEQOUTE", "ASSIGN", "LPAR", "RPAR", "PLUS", "MINUS", "TIMES", "DIVISION", 
			"MOD", "PI", "LEQ", "GEQ", "EQ", "NEQ", "LESS", "GREATER", "HASHTAG", 
			"WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "safedeclaration.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public safedeclarationParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SafedeclarationContext extends ParserRuleContext {
		public SafedeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_safedeclaration; }
	 
		public SafedeclarationContext() { }
		public void copyFrom(SafedeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SafeDeclNodeContext extends SafedeclarationContext {
		public TerminalNode SAFETY() { return getToken(safedeclarationParser.SAFETY, 0); }
		public VdclContext vdcl() {
			return getRuleContext(VdclContext.class,0);
		}
		public VdclassignContext vdclassign() {
			return getRuleContext(VdclassignContext.class,0);
		}
		public SafeDeclNodeContext(SafedeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterSafeDeclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitSafeDeclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitSafeDeclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SafedeclarationContext safedeclaration() throws RecognitionException {
		SafedeclarationContext _localctx = new SafedeclarationContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_safedeclaration);
		try {
			_localctx = new SafeDeclNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(SAFETY);
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(47);
				vdcl();
				}
				break;
			case 2:
				{
				setState(48);
				vdclassign();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VdclContext extends ParserRuleContext {
		public VdclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vdcl; }
	 
		public VdclContext() { }
		public void copyFrom(VdclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringVDclNodeContext extends VdclContext {
		public StringdeclContext stringdecl() {
			return getRuleContext(StringdeclContext.class,0);
		}
		public StringVDclNodeContext(VdclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterStringVDclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitStringVDclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitStringVDclNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BoolVDclNodeContext extends VdclContext {
		public BooldeclContext booldecl() {
			return getRuleContext(BooldeclContext.class,0);
		}
		public BoolVDclNodeContext(VdclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterBoolVDclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitBoolVDclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitBoolVDclNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CharVDclNodeContext extends VdclContext {
		public ChardeclContext chardecl() {
			return getRuleContext(ChardeclContext.class,0);
		}
		public CharVDclNodeContext(VdclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterCharVDclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitCharVDclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitCharVDclNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumVDclNodeContext extends VdclContext {
		public NumdeclContext numdecl() {
			return getRuleContext(NumdeclContext.class,0);
		}
		public NumVDclNodeContext(VdclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterNumVDclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitNumVDclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitNumVDclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VdclContext vdcl() throws RecognitionException {
		VdclContext _localctx = new VdclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vdcl);
		try {
			setState(55);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMDCL:
				_localctx = new NumVDclNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				numdecl();
				}
				break;
			case CHARDCL:
				_localctx = new CharVDclNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				chardecl();
				}
				break;
			case STRDCL:
				_localctx = new StringVDclNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(53);
				stringdecl();
				}
				break;
			case BOOLDCL:
				_localctx = new BoolVDclNodeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(54);
				booldecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VdclassignContext extends ParserRuleContext {
		public VdclassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vdclassign; }
	 
		public VdclassignContext() { }
		public void copyFrom(VdclassignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BoolVDclAssignNodeContext extends VdclassignContext {
		public BooldclassignContext booldclassign() {
			return getRuleContext(BooldclassignContext.class,0);
		}
		public BoolVDclAssignNodeContext(VdclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterBoolVDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitBoolVDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitBoolVDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CharVDclAssignNodeContext extends VdclassignContext {
		public ChardclassignContext chardclassign() {
			return getRuleContext(ChardclassignContext.class,0);
		}
		public CharVDclAssignNodeContext(VdclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterCharVDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitCharVDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitCharVDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringVDclAssignNodeContext extends VdclassignContext {
		public StringdclassignContext stringdclassign() {
			return getRuleContext(StringdclassignContext.class,0);
		}
		public StringVDclAssignNodeContext(VdclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterStringVDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitStringVDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitStringVDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumVDclAssignNodeContext extends VdclassignContext {
		public NumdclassignContext numdclassign() {
			return getRuleContext(NumdclassignContext.class,0);
		}
		public NumVDclAssignNodeContext(VdclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterNumVDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitNumVDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitNumVDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VdclassignContext vdclassign() throws RecognitionException {
		VdclassignContext _localctx = new VdclassignContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vdclassign);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMDCL:
				_localctx = new NumVDclAssignNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				numdclassign();
				}
				break;
			case CHARDCL:
				_localctx = new CharVDclAssignNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(58);
				chardclassign();
				}
				break;
			case STRDCL:
				_localctx = new StringVDclAssignNodeContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(59);
				stringdclassign();
				}
				break;
			case BOOLDCL:
				_localctx = new BoolVDclAssignNodeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(60);
				booldclassign();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumdeclContext extends ParserRuleContext {
		public NumdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numdecl; }
	 
		public NumdeclContext() { }
		public void copyFrom(NumdeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumDeclNodeContext extends NumdeclContext {
		public TerminalNode NUMDCL() { return getToken(safedeclarationParser.NUMDCL, 0); }
		public TerminalNode ID() { return getToken(safedeclarationParser.ID, 0); }
		public NumDeclNodeContext(NumdeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterNumDeclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitNumDeclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitNumDeclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumdeclContext numdecl() throws RecognitionException {
		NumdeclContext _localctx = new NumdeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numdecl);
		try {
			_localctx = new NumDeclNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(NUMDCL);
			setState(64);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooldeclContext extends ParserRuleContext {
		public BooldeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booldecl; }
	 
		public BooldeclContext() { }
		public void copyFrom(BooldeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BoolDeclNodeContext extends BooldeclContext {
		public TerminalNode BOOLDCL() { return getToken(safedeclarationParser.BOOLDCL, 0); }
		public TerminalNode ID() { return getToken(safedeclarationParser.ID, 0); }
		public BoolDeclNodeContext(BooldeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterBoolDeclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitBoolDeclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitBoolDeclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooldeclContext booldecl() throws RecognitionException {
		BooldeclContext _localctx = new BooldeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_booldecl);
		try {
			_localctx = new BoolDeclNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			match(BOOLDCL);
			setState(67);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChardeclContext extends ParserRuleContext {
		public ChardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chardecl; }
	 
		public ChardeclContext() { }
		public void copyFrom(ChardeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CharDeclNodeContext extends ChardeclContext {
		public TerminalNode CHARDCL() { return getToken(safedeclarationParser.CHARDCL, 0); }
		public TerminalNode ID() { return getToken(safedeclarationParser.ID, 0); }
		public CharDeclNodeContext(ChardeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterCharDeclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitCharDeclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitCharDeclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChardeclContext chardecl() throws RecognitionException {
		ChardeclContext _localctx = new ChardeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_chardecl);
		try {
			_localctx = new CharDeclNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(CHARDCL);
			setState(70);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringdeclContext extends ParserRuleContext {
		public StringdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringdecl; }
	 
		public StringdeclContext() { }
		public void copyFrom(StringdeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringDeclNodeContext extends StringdeclContext {
		public TerminalNode STRDCL() { return getToken(safedeclarationParser.STRDCL, 0); }
		public TerminalNode ID() { return getToken(safedeclarationParser.ID, 0); }
		public StringDeclNodeContext(StringdeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterStringDeclNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitStringDeclNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitStringDeclNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringdeclContext stringdecl() throws RecognitionException {
		StringdeclContext _localctx = new StringdeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stringdecl);
		try {
			_localctx = new StringDeclNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(STRDCL);
			setState(73);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumdclassignContext extends ParserRuleContext {
		public NumdclassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numdclassign; }
	 
		public NumdclassignContext() { }
		public void copyFrom(NumdclassignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumDclAssignNodeContext extends NumdclassignContext {
		public NumdeclContext numdecl() {
			return getRuleContext(NumdeclContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(safedeclarationParser.ASSIGN, 0); }
		public AexprContext aexpr() {
			return getRuleContext(AexprContext.class,0);
		}
		public NumDclAssignNodeContext(NumdclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterNumDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitNumDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitNumDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumdclassignContext numdclassign() throws RecognitionException {
		NumdclassignContext _localctx = new NumdclassignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numdclassign);
		try {
			_localctx = new NumDclAssignNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			numdecl();
			setState(76);
			match(ASSIGN);
			setState(77);
			aexpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ChardclassignContext extends ParserRuleContext {
		public ChardclassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chardclassign; }
	 
		public ChardclassignContext() { }
		public void copyFrom(ChardclassignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CharDclAssignNodeContext extends ChardclassignContext {
		public ChardeclContext chardecl() {
			return getRuleContext(ChardeclContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(safedeclarationParser.ASSIGN, 0); }
		public TerminalNode CHARVAL() { return getToken(safedeclarationParser.CHARVAL, 0); }
		public CharDclAssignNodeContext(ChardclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterCharDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitCharDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitCharDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChardclassignContext chardclassign() throws RecognitionException {
		ChardclassignContext _localctx = new ChardclassignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_chardclassign);
		try {
			_localctx = new CharDclAssignNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			chardecl();
			setState(80);
			match(ASSIGN);
			setState(81);
			match(CHARVAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringdclassignContext extends ParserRuleContext {
		public StringdclassignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringdclassign; }
	 
		public StringdclassignContext() { }
		public void copyFrom(StringdclassignContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StringDclAssignNodeContext extends StringdclassignContext {
		public StringdeclContext stringdecl() {
			return getRuleContext(StringdeclContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(safedeclarationParser.ASSIGN, 0); }
		public TerminalNode STRVAL() { return getToken(safedeclarationParser.STRVAL, 0); }
		public StringDclAssignNodeContext(StringdclassignContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).enterStringDclAssignNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof safedeclarationListener ) ((safedeclarationListener)listener).exitStringDclAssignNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof safedeclarationVisitor ) return ((safedeclarationVisitor<? extends T>)visitor).visitStringDclAssignNode(this);
			else return visitor.visitChildren(this);
		}
	}
